syntax = "proto3";
package recordpb;

// Data represents test data.
message Data {
  string endpoint = 1;
  uint32 clusterSize = 2;
  string started = 3;
  uint64 current = 4;
  uint64 currentFailed = 5;
  repeated string failureCases = 6;
}

// Record represents record data.
message Record {
  uint64 total = 1;
  repeated Data testData = 2;
}
